# libmacro

./: .clang-format  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  Doxyfile.in  Libmacro  README.md  SPEC.md  TODO.md  common.pri  coverage.cmake  cpack.cmake  deployqt.cmake  doxygen.cmake  git.cmake  libmacro.astylerc  libmacro.cmake  profile.c  profile.cpp  todo.txt
.github/workflows/: build.yml
assets/: example.csv
assets/linux/: char_key_shifted.csv  char_key_special.csv  char_key_unshifted.csv  key_names.csv
assets/windows/: char_key_shifted.csv  char_key_special.csv  char_key_unshifted.csv  key_names.csv
config/: coverage.cmake  cpack.cmake  doxygen.cmake  libmacro.cmake
docs/: architecture.md  cmake_modules.md  getting-started.md  platform.md  requirements.md  testing.md  usage.md
examples/: basic_macro.cpp  dispatch_signal.cpp  serial_names.cpp
extras/: alarm.cpp
mcr/: allocator.h  api.h  context.h  defines.h  dispatcher.h  err.h  error.h  factory.h  globals.h  inline.h  libmacro.h  macro.h  macro_registry.h  platform.h  private.h  serial.h  signal.h  signal_registry.h  trigger.h  trigger_registry.h  types.h  warn.h
mcr/actor/: functor.h
mcr/apple/: p_defines.h
mcr/base/: abs_dispatcher.h  base.h  data_member.h  dispatch.h  idispatcher.h  instance.h  interface.h  iregistry.h  isignal.h  itrigger.h  mod_flags.h  signal.h  signal_set.h  trigger.h  types.h
mcr/extras/: base_cpp.h  classes.h  dispatcher.h  extras.h  functions.h  idata_member.h  iserializer.h  isignal_member.h  itrigger_member.h  key_dispatcher.h  macro.h  macros_interrupted.h  properties.h  registry.h  safe_string.h  serial.h  signal_functions.h  trigger_functions.h  wrappers.h
mcr/extras/linux/: p_extras.h
mcr/extras/none/: p_extras.h
mcr/extras/references/: isignal_builder.h  itrigger_builder.h  reference.h  signal_builder.h  trigger_builder.h
mcr/extras/signals/: command.h  interrupt.h  string_key.h
mcr/extras/triggers/: alarm.h  staged.h
mcr/extras/util/: contract.h  dispatch_receiver_less.h  dispatch_receiver_map.h  dispatch_receiver_set.h  string.h  string_less_ci.h
mcr/extras/windows/: p_extras.h
mcr/intercept/: intercept.h
mcr/intercept/linux/: p_grabber.h  p_intercept.h
mcr/intercept/windows/: p_intercept.h
mcr/linux/: p_defines.h  p_libmacro.h
mcr/none/: p_defines.h  p_libmacro.h
mcr/signal/: functor.h  interrupt.h  modifier.h  noop.h
mcr/standard/: abs_key_dispatcher.h  action.h  hid_echo.h  key.h  modifier.h  move_cursor.h  noop.h  scroll.h  standard.h  trigger_flags.h
mcr/standard/linux/: p_device.h  p_standard.h
mcr/standard/none/: p_standard.h
mcr/standard/windows/: p_standard.h
mcr/template/: list.h  string_less_ci.h
mcr/trigger/: action.h  functor.h
mcr/util/: c11threads.h  comparison.h  cppthread.h  util.h
mcr/util/linux/: p_util.h
mcr/util/none/: p_util.h
mcr/util/windows/: p_util.h
mcr/windows/: p_defines.h  p_libmacro.h
play/: play.cpp
scripts/: coverage.sh  style  wordcount.sh
src/: api.cpp  dispatcher.cpp  globals.c  libmacro.c  libmacro.cpp  macro.cpp  macro_registry.cpp  serial.cpp  signal.cpp  signal_registry.cpp  trigger.cpp  trigger_registry.cpp
src/base/: abs_dispatcher.c  base.c  data_member.c  dispatch.c  idispatcher.c  instance.c  interface.c  iregistry.c  isignal.c  itrigger.c  mod_flags.c  signal.c  signal_set.c  trigger.c
src/extras/: dispatcher.cpp  extras.cpp  functions.cpp  interrupt.cpp  key_dispatcher.cpp  macro.cpp  macros_interrupted.cpp  registry.cpp  safe_string.cpp  serial.cpp  signal_functions.cpp  trigger_functions.cpp  wrappers.cpp
src/extras/linux/: p_extras.cpp  p_serial.cpp  p_signal_extras.cpp
src/extras/references/: isignal_builder.cpp  itrigger_builder.cpp  signal_builder.cpp  trigger_builder.cpp
src/extras/signals/: command.cpp  interrupt.cpp  string_key.cpp
src/extras/ssl/: p_safe_string.cpp
src/extras/util/: dispatch_receiver_set.cpp  string.cpp
src/extras/windows/: p_extras.cpp  p_serial.cpp  p_signal_extras.cpp
src/intercept/: intercept.c
src/intercept/linux/: p_grabber.c  p_intercept.c
src/intercept/windows/: p_intercept.c
src/signal/: dispatcher.c  interrupt.cpp  modifier.cpp  noop.cpp  signal.c
src/standard/: abs_key_dispatcher.c  action.c  hid_echo.c  key.c  modifier.c  move_cursor.c  noop.c  scroll.c  standard.c
src/standard/linux/: p_device.c  p_standard.c
src/standard/windows/: p_standard.c
src/template/: list.cpp
src/trigger/: action.cpp
src/util/: comparison.c  cppthread.cpp  util.c
src/util/linux/: p_util.c
src/util/none/: p_util.c
src/util/windows/: p_util.c
test/: expect_actor.h  expect_receiver.h  known_failures.txt  lorem_ipsum.txt  main.cpp  main.h  sendkey.cpp  sendkey.h  sendstring.cpp  sendstring.h  taction.cpp  taction.h  tcreate.cpp  tcreate.h  tdispatcher.cpp  tdispatcher.h  tkeys.cpp  tkeys.h  tlibmacro.cpp  tlibmacro.h  tmacro.cpp  tmacro.h  tregistry.cpp  tregistry.h  tserial.cpp  tserial.h  tst_intercept.cpp  tst_intercept.h
test/macro/: tmacroreceive.cpp  tmacroreceive.h
test/signal/: tgendispatch.cpp  tgendispatch.h
